syntax = "proto3";

package shoppingcart;

option java_multiple_files = true;
option java_package = "shopping.cart.proto";

// Service definition.
service ShoppingCartService {
  // Defines the request a client may send to the service.
  rpc AddItem(AddItemRequest) returns (Cart) {}
}

// Describes the request to add an item to the shopping cart.
message AddItemRequest {
  string cart_id = 1;
  string item_id = 2;
  int32 quantity = 3;
}

message Cart {
  repeated Item items = 1;
}

message Item {
  string item_id = 1;
  int32 quantity = 2;
}